--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,8 @@ spring.jackson.serialization.write-dates-as-timestamps=false
 
 # DATABASE
 server.port=8080
-spring.datasource.url = jdbc:mysql://localhost:3306/btvn1
+# spring.datasource.url = jdbc:mysql://localhost:3306/btvn1?serverTimezone=UTC
+spring.datasource.url = jdbc:mysql://befbdbcefeecaf:10fe0943@us-cdbr-iron-east-05.cleardb.net/heroku_279019c388941a5?reconnect=true
 spring.datasource.username=root
 spring.datasource.password=Hailovetrang1
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
